--- a/oehealth_idn/report/rujukan_pasien_report.xml
+++ b/oehealth_idn/report/rujukan_pasien_report.xml
@@ -7,105 +7,90 @@
                     <div class="page">
                             <div class="oe_structure">
                                 <div class="row">
-                                    <p style="font-size:24px;text-align:center;font-weight:bold;">RUJUKAN KONSULTASI</p>
+                                    <p style="font-size:24px;text-align:center;font-weight:bold;">FORMULIR RUJUKAN PASIEN</p>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-8">
                                         <div>
                                             <strong>No. Arrival / No. RM:</strong>
-                                            <p><span t-field="o.arrival_id.name"/> / <span t-field="o.arrival_id.patient.medical_record"/></p>
+                                            <p><span t-field="o.name"/> / <span t-field="o.arrival_id.patient.medical_record"/></p>
                                         </div>
                                         <div>
                                             <strong>Nama pasien:</strong>
-                                            <p t-field="o.arrival_id.patient.name"/>
+                                            <p t-field="o.patient.name"/>
                                         </div>
                                         <div>
                                             <strong>Tanggal Lahir:</strong>
-                                            <p t-field="o.arrival_id.patient.dob" t-field-options='{"format": "d MMMM y"}'/>
+                                            <p t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}'/>
                                         </div>
                                         <div>
                                             <strong>Umur:</strong>
-                                            <p t-field="o.patient_id.age"/>
+                                            <p t-field="o.patient.age"/>
                                         </div>
                                     </div>
 
                                 </div>
-                                <div class="row">
-                                    <div class="row mt32">
+                                <div class="row mt32">
                                         <p style="font-size:20px;text-align:left;font-weight:bold">VITAL SIGNS</p>
                                     </div>
+                                <div class="row">
                                     <div class="col-xs-8">
                                         <div>
                                             <strong>Temperature (celsius):</strong>
-                                            <p t-field="o.reg_id.evaluation_id.temperature"/>
+                                            <p t-field="o.evaluation_id.temperature"/>
                                         </div>
                                         <div>
                                             <strong>Diastolic Pressure:</strong>
-                                            <p t-field="o.reg_id.evaluation_id.diastolic" />
+                                            <p t-field="o.evaluation_id.diastolic" />
                                         </div>
                                         <div>
                                             <strong>Respiratory Rate :</strong>
-                                            <p t-field="o.reg_id.evaluation_id.respiratory_rate"/>
+                                            <p t-field="o.evaluation_id.respiratory_rate"/>
                                         </div>
                                     </div>
                                     <div class="col-xs-4">
                                         <div>
                                             <strong>Systolic Pressure:</strong>
-                                            <p t-field="o.reg_id.evaluation_id.systolic"/>
+                                            <p t-field="o.evaluation_id.systolic"/>
                                         </div>
                                         <div>
                                             <strong>Heart Rate:</strong>
-                                            <p t-field="o.reg_id.evaluation_id.bpm" />
+                                            <p t-field="o.evaluation_id.bpm" />
                                         </div>
                                         <div>
                                             <strong>Oxygen Saturation  :</strong>
-                                            <p t-field="o.reg_id.evaluation_id.osat"/>
+                                            <p t-field="o.evaluation_id.osat"/>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="row mt32">
-                                    <p style="font-size:20px;text-align:left;font-weight:bold">DIAGNOSA</p>
-                                </div>
-                                <table class="table table-condensed">
-                                    <thead>
-                                        <tr>
-                                            <th class="text-left">Pathology</th>
-                                            
-                                        </tr>
-                                    </thead>
-                                    <tbody class="invoice_tbody">
-                                        <tr t-foreach="o.reg_id.evaluation_id.diagnostic_ids" t-as="l" >
-                                            <td class="text-left">
-                                                <span t-field="l.product_id.name"/>
-                                            </td>
-                                            
-                                        
-                                        </tr>
-                                    </tbody>
-                                </table>
                                  <div class="row mt32">
                                     <p style="font-size:20px;text-align:left;font-weight:bold">TERAPI YANG SUDAH DI BERIKAN</p>
                                 </div>
+
                                 <table class="table table-condensed">
                                     <thead>
                                         <tr>
-                                            <th class="text-left">Nama Tindakan</th>
-                                            <th class="text-center">Dokter</th>
-                                            <th class="text-center">Tanggal</th>
-                                            
+                                            <th class="text-left">Obat</th>
+                                            <th class="text-center">Dosis</th>
+                                            <th class="text-center">QTY</th>
+                                            <th class="text-center">Duration</th>
+        
                                         </tr>
                                     </thead>
                                     <tbody class="invoice_tbody">
-                                        <tr t-foreach="o.order_line" t-as="s" >
+                                        <tr t-foreach="o.patient.prescription_line" t-as="s" >
                                             <td class="text-left">
-                                                <span t-field="s.product_id"/>
+                                                <span t-field="s.name"/>
                                             </td>
-                                            <td class="text-center">
-                                                <span t-field="o.doctor_id"/>
+                                            <td class="text-left">
+                                                <span t-field="s.dose"/>
                                             </td>
-                                            <td class="text-center">
-                                                <span t-field="o.confirmation_date" t-field-options='{"format": "d MMMM y"}'/>
+                                            <td class="text-left">
+                                                <span t-field="s.qty"/>
+                                            </td>
+                                            <td class="text-left">
+                                                <span t-field="s.duration"/>
                                             </td>
                                         
                                         </tr>
