--- a/oehealth_idn/report/report_menu.xml
+++ b/oehealth_idn/report/report_menu.xml
@@ -35,9 +35,21 @@
 
     <report id="perintah_rawat_inap_report_menu" string="Perintah Rawat Inap" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_perintah_rawat_inap" menu="True" />
 
-    <report id="rekam_medis_report_menu" string="Form Rekam Medis" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_rekam_medis" menu="True" />
+    <report id="pengkajian_report_menu" string="Form Pengkajian" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_pengkajian" menu="True" />
+
+    <report id="pengkajian_rawat_inap_report_menu" string="Form Pengkajian Rawat Inap" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_pengkajian_rawat_inap" menu="True" />
+
+    <report id="rekam_medis_rawat_jalan_report_menu" string="Form Rekam Medis Rawat Jalan" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_rekam_medis_rawat_jalan" menu="True" />
+
+    <report id="cppt_report_menu" string="Form CPPT" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_cppt" menu="True" />
+
+    <report id="implementasi_keperawatan_report_menu" string="Form Implementasi Keperawatan" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_implementasi_keperawatan" menu="True" />
+
+    <report id="catatan_asuhan_gizi_report_menu" string="Form Catatan Asuhan Gizi" model="oeh.medical.evaluation" report_type="qweb-pdf" name="oehealth_idn.report_catatan_asuhan_gizi" menu="True" />
 
     <report id="persetujuan_tindakan_report_menu" string="Persetujuan Tindakan" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_persetujuan_tindakan" menu="True" />
+
+    <report id="rujukan_internal_report_menu" string="Rujukan Internal" model="unit.registration" report_type="qweb-pdf" name="oehealth_idn.report_rujukan_internal" menu="True" />
 
     <report id="daftar_transaksi_detail_report_menu" string="Daftar Transaksi Detail" model="sale.order" report_type="qweb-pdf" name="oehealth_idn.report_daftar_transaksi_detail" menu="True" />
 
